# libhidx

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  getasio.sh
cmake_modules/: Findasio.cmake
include/libhidx/: Interface.hh  InterfaceHandle.hh  LibHidxFactory.hh  Parser.hh
libhidx/: CMakeLists.txt
libhidx/include/libhidx/: Device.hh  DeviceStrings.hh  Interface.hh  InterfaceHandle.hh  LibHidx.hh  Parser.hh  Usages.hh
libhidx/include/libhidx/hid/: Collection.hh  Control.hh  Item.hh  Usage.hh
libhidx/src/: Connector.cc  Connector.hh  Device.cc  Interface.cc  InterfaceHandle.cc  LibHidx.cc  Parser.cc  Usages.cc  subprocess.hh
libhidx/src/hid/: Collection.cc  Control.cc  Item.cc  Usage.cc
libhidx_buffer/: CMakeLists.txt  buffer.proto  buffer_helper.cc  buffer_helper.hh
libhidx_helper/: CMakeLists.txt  main.cc
libhidx_server/: CMakeLists.txt
libhidx_server/include/libhidx/server/: Buffer.hh  Server.hh  Utils.hh
libhidx_server/src/: Buffer.proto  Server.cc  Utils.cc  main.cc
libhidx_server_daemon/: CMakeLists.txt
libhidx_server_daemon/src/: main.cc
libhidx_shared/: CMakeLists.txt
libhidx_shared/include/libhidx/shared/: Utils.hh
libhidx_shared/src/: Utils.cc
src/: Device.cc  Interface.cc  InterfaceHandle.cc  LibHidx.cc  Parser.cc  Usages.cc
